--- a/Backend_PG/src/.env
+++ b/Backend_PG/src/.env
@@ -5,6 +5,7 @@ DB_PASSWORD="Abhiraj@123"
 DB_HOST="localhost"
 DB_PORT=5432
 DB_NAME="Project_Pg"
-DATABASE_URL=postgres://postgres:Abhiraj@123@localhost:5432/Project_Pg
+DATABASE_URL=postgres://postgres:Abhiraj%40123@localhost:5432/Project_Pg
+
 
 
