--- a/Backend_PG/src/.env
+++ b/Backend_PG/src/.env
@@ -5,7 +5,8 @@ DB_PASSWORD="Abhiraj@123"
 DB_HOST="localhost"
 DB_PORT=5432
 DB_NAME="Project_Pg"
-DATABASE_URL=postgres://postgres:Abhiraj%40123@dpg-cooldb12345.pg.render.com:5432/Project_pg
+DATABASE_URL=postgres://postgres:6hbJnwNjCDhRk3cvxmBrQL2gH7M7tJM4@dpg-d244mjp5pdvs73ftechg-a:5432/project_pg
+
 
 
 
